adding channel class

--- a/irc.conf
+++ b/irc.conf
@@ -1,4 +1,4 @@
 # Folder where log files are stored
-LogFolder=irc
+LogFolder=logs
 # Max simultaneous connections that server can handle
 MaxConnections=5000
